--- a/style.css
+++ b/style.css
@@ -6,5 +6,9 @@
   height: 56px;
   width: 56px;
   border-style: none;
-
+  background-color: #D8D8D8;
+  left: 20px;
+}
+.cocoronumber{
+  right: 20px;
 }
